Updating theme and some minor content

--- a/content/book/1.06-killing-someone.md
+++ b/content/book/1.06-killing-someone.md
@@ -351,7 +351,7 @@ Another notification popped up.
 
 > **Johnathan Bayer (john@jabber.bayer.tic)**: Do you know when you'll be back?
 
-> > **Anthony Bayer (anthony@jabber.bayer.tic)**: No, why?
+> **Anthony Bayer (anthony@jabber.bayer.tic)**: No, why?
 
 > I have something I want to tell you.
 
